# quick-start-guide-to-llms

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: english_to_latex.csv  latex-guide-cos423.txt
notebooks/: 02_semantic_search.ipynb  03_prompt_engineering.ipynb  04_agent.ipynb  04_rag_retrieval.ipynb  05_bert_app_review.ipynb  05_openai_app_review_fine_tuning.ipynb  06_adv_prompt_engineering - DEEPSEEK.ipynb  06_adv_prompt_engineering - Llama4.ipynb  06_adv_prompt_engineering.ipynb  07_recommendation_engine.ipynb  09_constructing_a_vqa_system.ipynb  09_flan_t5_rl.ipynb  09_using_our_vqa.ipynb  10_SAWYER_LLAMA_SFT.ipynb  10_SAWYER_RLF.ipynb  10_SAWYER_Reward_Model.ipynb  10_SAWYER_USE_SAWYER.ipynb  10_anime_category_classification_model_freezing.ipynb  10_latex_gpt2.ipynb  10_optimizing_fine_tuning.ipynb  11_distillation_example_1.ipynb  11_distillation_example_2.ipynb  11_llama_quantization.ipynb  12_cluster.ipynb  12_llm_calibration.ipynb  12_llm_gen_eval.ipynb  2_semantic_search.ipynb  3_prompt_engineering.ipynb  4_fine_tuning_arithmetic.ipynb  5_VQA.ipynb  5_adv_prompt_engineering.ipynb  6_recommendation_engine.ipynb  7_constructing_a_vqa_system.ipynb  7_using_our_vqa.ipynb  8_anime_category_classification_model_freezing.ipynb  8_optimizing_fine_tuning.ipynb  8_sawyer_1_instruction_ft.ipynb  8_sawyer_2_train_reward_model.ipynb  8_sawyer_3_rl.ipynb  8_sawyer_4_use_sawyer.ipynb  (+2 more)
semantic-search-fastapi/: .env  Dockerfile  README.md  api.py  chunking_utils.py  conversation_utils.py  requirements.txt  retrieval_utils.py
(+3 files in other folders)
